Fix favicon spacing

--- a/gui/css/index.css
+++ b/gui/css/index.css
@@ -21,12 +21,16 @@ body {
     @apply bg-transparent;
 }
 
+.addressBar {
+    @apply grid grid-flow-col bg-black pl-0;
+}
+
 .url {
     @apply flex select-none place-content-center items-center bg-black;
 }
 
 .favicon {
-    @apply pointer-events-none aspect-square;
+    @apply pointer-events-none ml-4 mr-1 aspect-square;
 }
 
 .input {
